# 911VulScan

./: .dockerignore  .gitignore  .gitleaks.toml  .publish-exclude  .publish-forbidden-strings  Dockerfile  deploy_911vulscan.sh
libs/vulscan-core/: 911VULSCAN.md  911VULSCAN_TWO_STAGE_PLANNING.md  CLAUDE.md  CURRENT_IMPLEMENTATION.md  DOCUMENTATION.md  PIPELINE_MANUAL.md  README.md  REPOSITORY_INSPECTION_PROTOCOL.md  VULNERABILITY_HUNTING_PROTOCOL.md  experiment.py  export_csv.py  generate_report.py  moon.yml  pyproject.toml  requirements.txt  validate_dataset_schema.py
libs/vulscan-core/context/: __init__.py  application_context.py  generate_context.py
libs/vulscan-core/core/: __init__.py  analyzer.py  checkpoint.py  diff_filter.py  dynamic_tester.py  enhancer.py  parser_adapter.py  pipeline_config.py  progress.py  reporter.py  scanner.py  schemas.py  step_report.py  tracking.py  verdict.py  verifier.py  verify_status.py
libs/vulscan-core/data/: advisory_cache.json
libs/vulscan-core/github_scanner/: github_repo_filter.py
libs/vulscan-core/prompts/: prompt_selector.py  threat_model.py  verification_prompts.py  vulnerability_analysis.py
libs/vulscan-core/report/: README.md  __init__.py  __main__.py  generator.py  schema.py
libs/vulscan-core/research/: __init__.py  experiment.py
libs/vulscan-core/tests/: conftest.py  test_advisory_lookup.py  test_agreement_filter.py  test_application_context_neutral.py  test_call_graph_output.py  test_cli_pipeline_flags.py  test_compile_error_repair.py  test_compose_sanitize.py  test_core_dynamic_tester.py  test_credentials.py  (+64 more)
(+269 files in other folders)
